roles api added
